# vadims-project-system

./: .gitignore  CMakeLists.txt  README.md
config/: config.h.in
include/: ActionList.h  Arguments.h  NamedPipe.h
src/: ActionList.cpp  NamedPipe.cpp  main.cpp
utils/: CMakeLists.txt
utils/config/: config.h.in
utils/include/: ArgProc.h  Arguments.h  Daemon.h  NamedPipe.h  NewProject.h  PidFile.h  config.h
utils/src/: ArgProc.cpp  Arguments.cpp  Daemon.cpp  NamedPipe.cpp  NewProject.cpp  PidFile.cpp
vps/: CMakeLists.txt
vps/src/: main.cpp
vpsctl/: CMakeLists.txt
vpsctl/config/: config.h.in
vpsctl/include/: Version.h  WSManager.h  Workspace.h
vpsctl/src/: Version.cpp  Workspace.cpp  main.cpp
